<resources>
    <string name="app_name">Astro Weather</string>
    <string name="temperature">Temperature</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="powered_by_yahoo">powered by Yahoo!</string>
    <string name="condition_icon">Condition Icon</string>
    <string name="loading">Loading&#8230;</string>
    <string name="temperature_output">%1$d&#176;%2$s</string>
    <string name="update_location">Update Location</string>
    <string name="settings">Settings</string>
    <string name="cache_exception">No Cached Weather Data</string>
    <string name="location_permission_needed">Device location is needed for Weather GeoLocation</string>
    <string name="disable_geolocation">Change Settings</string>
    <string name="day">Day</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="pressure">Pressure</string>
    <string name="description">Description</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="wind">Wind</string>
    <string name="pref_title_cellular_data">Cellular data</string>
    <string name="pref_summary_cellular_data">This option if selected will turn on cellular data.</string>
    <string name="pref_summary_temperature_unit">Choose temperature unit</string>
    <string name="pref_summary_location">Write your location</string>
    <string name="pref_insert_to_favourites">favourites_insertion</string>
    <string name="coordinates">Coordinates</string>
    <string name="time">Time</string>
    <string name="localization">Localization</string>

    <string name="sun_TV_title">Info about sun</string>
    <string name="sun_TV_sunrise">Sunrise</string>
    <string name="sun_TV_sunset">Sunset</string>
    <string name="sun_TV_twilight">Twilight</string>
    <string name="time_and_azimuth">Time and azimuth</string>
    <string name="moon_TV_title">Info about moon</string>
    <string name="moon_TV_moonrise">Moonrise</string>
    <string name="moon_TV_moonset">Moonset</string>
    <string name="moon_TV_newmoon">Newmoon</string>
    <string name="date">Date</string>
    <string name="moon_TV_full">Najbliższa pełnia księżyca</string>
    <string name="moon_TV_phase">Moon phase</string>
    <string name="percents">Percents</string>
    <string name="moon_TV_synodic">Dzień miesiąca synodycznego</string>
    <string name="sun_TV_civilTwilight">Świt cywilny</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longtitude</string>
    <string name="refreshTime">Refresh time</string>
    <string name="favorites">Favourites</string>
    <string name="cityName">City name</string>
    <string name="fav_edit_text">Add element favourites.</string>
    <string name="favourites">Favourites</string>
    <string name="pref_title_insert_to_favourites">Add this city to favourites?</string>
    <string name="pref_summary_insert_to_favourites">This options allows you to add city to favourites.</string>
</resources>
