<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.politechnika.app.astroweather.fragments.WeatherConditionFragment">

    <ImageView
        android:id="@+id/weatherIconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:contentDescription="@string/condition_icon"
        android:src="@drawable/icon_na" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pressureTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"/>

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weatherIconImageView"
        android:layout_centerHorizontal="true"
        android:padding="1dp"
        android:shadowColor="@android:color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:text="@string/temperature"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/windTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperatureTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:fontFamily="sans-serif-condensed"

        android:textColor="@android:color/white"
        android:shadowColor="@android:color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"

        android:text="@string/day"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/coordinatesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/coordinates"
        android:textAlignment="textStart"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"/>

    <TextView
        android:id="@+id/pressureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/windTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/pressure"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"/>

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/location"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"/>

</RelativeLayout>
